--- a/a3.html
+++ b/a3.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Sets the character encoding to UTF-8 for special characters -->
   <meta charset="UTF-8">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UOB Student Nationalities</title>
+  
+  <!-- Link to the Pico CSS framework for modern, clean styling -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.0.6/css/pico.min.css" />
+  
+  <!-- Link to the custom CSS file for additional styles -->
   <link rel="stylesheet" href="styles.css">
+  
 </head>
 <body>
   <main class="container">
     <h1>UOB Student Nationalities</h1>
     <table>
+      <!-- Table header defining column names -->
       <thead>
         <tr>
             <th>Year</th>
@@ -21,6 +29,7 @@
             <th>Number of Students</th>
         </tr>
       </thead>
+
       <tbody id="data-table-body">
         <!-- Data will be dynamically inserted here -->
       </tbody>
